--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,12 +13,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Tournamaker2"
+        android:theme="@style/Theme.Tournamaker"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
 
         <activity
-            android:name="com.example.tournamaker2.MainActivity"
+            android:name="com.example.tournamaker.MainActivity"
             android:exported="true"
             android:windowSoftInputMode="adjustResize">
             <intent-filter>
